refactor main.ipynb

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -8,13 +8,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Import libraries"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -22,17 +15,11 @@
    },
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "\n",
+    "import cv2 as cv\n",
+    "import matplotlib.pyplot as plt\n",
+    "from jupyter_bbox_widget import BBoxWidget\n",
     "from plotly.express import imshow as imshow_interactive"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Import app modules"
    ]
   },
   {
@@ -56,31 +43,20 @@
    "outputs": [],
    "source": [
     "from scanplot.io import read_image_rgb, dump_coords_csv\n",
-    "from scanplot.plotting import draw_image, draw_ROI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scanplot.core import template_match\n",
-    "from scanplot.core import replace_black_pixels\n",
-    "from scanplot.core import normalize_map\n",
-    "from scanplot.core import image_tresholding, reconstruct_template_mask\n",
-    "from scanplot.core import generalized_hough_transform\n",
-    "from scanplot.core import CoordinatesConverter\n",
-    "from scanplot.core import bboxes_to_roi, apply_roi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scanplot.view import CoordinatesMapper, DetectorWidget"
+    "from scanplot.plotting import draw_image, draw_ROI\n",
+    "from scanplot.view import CoordinatesMapper, DetectorWidget\n",
+    "\n",
+    "from scanplot.core import (\n",
+    "    template_match,\n",
+    "    replace_black_pixels,\n",
+    "    normalize_map,\n",
+    "    image_tresholding,\n",
+    "    reconstruct_template_mask,\n",
+    "    generalized_hough_transform,\n",
+    "    CoordinatesConverter,\n",
+    "    bboxes_to_roi,\n",
+    "    apply_roi,\n",
+    ")"
    ]
   },
   {
@@ -94,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Upload plot image and template image"
+    "## 1. Upload plot image and template image"
    ]
   },
   {
@@ -120,7 +96,7 @@
    "outputs": [],
    "source": [
     "PLOT_NUMBER = 66\n",
-    "MARKER_NUMBER = 4\n",
+    "MARKER_NUMBER = 5\n",
     "\n",
     "PLOT_PATH = DATA_PATH / \"plot_images\" / f\"plot{PLOT_NUMBER}.png\"\n",
     "TEMPLATE_PATH = (\n",
@@ -157,15 +133,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from jupyter_bbox_widget import BBoxWidget\n",
-    "import cv2 as cv\n",
-    "from matplotlib.patches import Rectangle\n",
-    "from matplotlib.patches import Patch"
+    "## 2. (optional step) Select region of interest"
    ]
   },
   {
@@ -209,32 +180,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_image(image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "image = apply_roi(image, roi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "draw_image(image)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tresholding"
+    "## 3. Run matching algorithms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.1. Perform template tresholding and create template masks"
    ]
   },
   {
@@ -258,14 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Template matching"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Run template matching algorithm and compute convolutoin (or correlatoin) map."
+    "3.2. Run template matching algorithm and compute correlatoin map"
    ]
   },
   {
@@ -286,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hough transform"
+    "3.3. Run Hough transform algorithm and compute accumulator array"
    ]
   },
   {
@@ -306,14 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Combine correlation maps"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This step combines correlation map obtained by template matching algorithm and accumulator array from Hough Transform."
+    "3.4. Combine correlation map obtained by template matching algorithm and accumulator array from Hough Transform"
    ]
   },
   {
@@ -333,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Algorithm parameters"
+    "## 4. Select algorithm parameters"
    ]
   },
   {
@@ -400,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convert coordinates"
+    "## 5. Convert obtained coordinates from pixel to real values"
    ]
   },
   {
