modify draw_ROI func

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -136,7 +136,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. (optional step) Select region of interest"
+    "## 2. (optional step) Select region of interest\n",
+    "\n",
+    "Default ROI is a whole image"
    ]
   },
   {
@@ -160,6 +162,15 @@
    "outputs": [],
    "source": [
     "roi_widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roi_widget.bboxes"
    ]
   },
   {
