little fixes in main.ipynb

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -161,16 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "roi_widget"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "roi_widget.bboxes"
+    "display(roi_widget)"
    ]
   },
   {
@@ -323,13 +314,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_size = 12\n",
-    "marker_size = 50\n",
-    "marker_color = \"yellow\"\n",
-    "marker_type = \"*\"\n",
+    "widget_settings = {\n",
+    "    \"fig_size\": 12,\n",
+    "    \"marker_size\": 50,\n",
+    "    \"marker_color\": \"yellow\",\n",
+    "    \"marker_type\": \"*\",\n",
+    "}\n",
     "\n",
-    "\n",
-    "detector.main_widget(fig_size, marker_size, marker_color, marker_type)"
+    "detector_widget = detector.main_widget(**widget_settings)\n",
+    "display(detector_widget)"
    ]
   },
   {
@@ -384,7 +377,8 @@
    "source": [
     "fig_size = 10\n",
     "\n",
-    "mapper.interactive_widget(fig_size=fig_size)"
+    "mapper_widget = mapper.interactive_widget(fig_size=fig_size)\n",
+    "display(mapper_widget)"
    ]
   },
   {
