improve accuracy on b/w images: recalculate treshold value for black markers

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -95,8 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PLOT_NUMBER = 66\n",
-    "MARKER_NUMBER = 5\n",
+    "PLOT_NUMBER = 51\n",
+    "MARKER_NUMBER = 1\n",
     "\n",
     "PLOT_PATH = DATA_PATH / \"plot_images\" / f\"plot{PLOT_NUMBER}.png\"\n",
     "TEMPLATE_PATH = (\n",
@@ -113,8 +113,8 @@
     "source_image = read_image_rgb(PLOT_PATH)\n",
     "source_template = read_image_rgb(TEMPLATE_PATH)\n",
     "\n",
-    "image = replace_black_pixels(source_image)\n",
-    "template = replace_black_pixels(source_template)"
+    "image = replace_black_pixels(source_image, value=10)\n",
+    "template = replace_black_pixels(source_template, value=10)"
    ]
   },
   {
@@ -131,6 +131,20 @@
     "draw_image(template)\n",
     "plt.title(\"Chosen marker\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -205,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "template_mask = image_tresholding(template)\n",
+    "template_mask = image_tresholding(source_template, treshold=100)\n",
     "additional_template_mask = reconstruct_template_mask(template_mask)\n",
     "\n",
     "# fig = plt.figure()\n",
@@ -214,6 +228,15 @@
     "\n",
     "# plt.subplot(1, 2, 2)\n",
     "# draw_image(additional_template_mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# draw_image(template_mask)"
    ]
   },
   {
@@ -232,6 +255,12 @@
     "correlation_map, _ = template_match(\n",
     "    image, template, template_mask, norm_result=True\n",
     ")\n",
+    "\n",
+    "correlation_map2, _ = template_match(\n",
+    "    image, template, template_mask, norm_result=True,\n",
+    "    method_name=\"cv.TM_SQDIFF\"\n",
+    ")\n",
+    "\n",
     "correlation_map_additional, _ = template_match(\n",
     "    image, template, additional_template_mask, norm_result=True\n",
     ")"
@@ -273,8 +302,23 @@
     "# correlation_map_combined = correlation_map + 0.7 * correlation_map_additional\n",
     "# correlation_map_combined = normalize_map(correlation_map_combined)\n",
     "\n",
+    "# correlation_map_with_hough = correlation_map + 0.6 * accumulator\n",
+    "# correlation_map_with_hough = normalize_map(correlation_map_with_hough)\n",
+    "\n",
+    "# correlation_map_new = (correlation_map + correlation_map2) / 2\n",
+    "# correlation_map_with_hough = correlation_map_new + 0.6 * accumulator\n",
+    "\n",
     "correlation_map_with_hough = correlation_map + 0.6 * accumulator\n",
     "correlation_map_with_hough = normalize_map(correlation_map_with_hough)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imshow_interactive(correlation_map_with_hough)"
    ]
   },
   {
@@ -315,7 +359,7 @@
    "outputs": [],
    "source": [
     "widget_settings = {\n",
-    "    \"fig_size\": 12,\n",
+    "    \"fig_size\": 9,\n",
     "    \"marker_size\": 50,\n",
     "    \"marker_color\": \"yellow\",\n",
     "    \"marker_type\": \"*\",\n",
