add marker centering featrue; refactor process_template.py

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -51,6 +51,8 @@
     "    replace_black_pixels,\n",
     "    normalize_map,\n",
     "    image_tresholding,\n",
+    "    get_template_mask,\n",
+    "    center_object_on_template_image,\n",
     "    reconstruct_template_mask,\n",
     "    generalized_hough_transform,\n",
     "    CoordinatesConverter,\n",
@@ -95,13 +97,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PLOT_NUMBER = 51\n",
+    "PLOT_NUMBER = 84\n",
     "MARKER_NUMBER = 1\n",
     "\n",
     "PLOT_PATH = DATA_PATH / \"plot_images\" / f\"plot{PLOT_NUMBER}.png\"\n",
-    "TEMPLATE_PATH = (\n",
-    "    DATA_PATH / \"marker_images\" / f\"plot{PLOT_NUMBER}_marker{MARKER_NUMBER}.png\"\n",
-    ")"
+    "TEMPLATE_PATH = DATA_PATH / \"marker_images\" / f\"plot{PLOT_NUMBER}_marker{MARKER_NUMBER}.png\""
    ]
   },
   {
@@ -110,11 +110,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_image = read_image_rgb(PLOT_PATH)\n",
-    "source_template = read_image_rgb(TEMPLATE_PATH)\n",
+    "source_plot_image = read_image_rgb(PLOT_PATH)\n",
+    "source_template_image = read_image_rgb(TEMPLATE_PATH)\n",
     "\n",
-    "image = replace_black_pixels(source_image, value=10)\n",
-    "template = replace_black_pixels(source_template, value=10)"
+    "plot_image = np.copy(source_plot_image)\n",
+    "template_image = np.copy(source_template_image)"
    ]
   },
   {
@@ -124,20 +124,13 @@
    "outputs": [],
    "source": [
     "plt.subplot(1, 2, 1)\n",
-    "draw_image(image)\n",
-    "plt.title(\"Source image\")\n",
+    "draw_image(source_plot_image)\n",
+    "plt.title(\"Source scatter plot image\")\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
-    "draw_image(template)\n",
+    "draw_image(source_template_image)\n",
     "plt.title(\"Chosen marker\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -164,7 +157,7 @@
     "roi_widget = BBoxWidget(\n",
     "    hide_buttons=True,\n",
     "    classes=[\"Region of interest\"],\n",
-    "    image_bytes=cv.imencode(\".png\", source_image)[1].tobytes(),\n",
+    "    image_bytes=cv.imencode(\".png\", source_plot_image)[1].tobytes(),\n",
     "    colors=[\"green\"],\n",
     ")"
    ]
@@ -184,19 +177,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "roi = bboxes_to_roi(source_image, roi_widget.bboxes)\n",
+    "roi = bboxes_to_roi(source_plot_image, roi_widget.bboxes)\n",
+    "plot_image = apply_roi(source_plot_image, roi)\n",
     "\n",
-    "draw_image(source_image)\n",
+    "draw_image(source_plot_image)\n",
     "draw_ROI(roi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = apply_roi(image, roi)"
    ]
   },
   {
@@ -210,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.1. Perform template tresholding and create template masks"
+    "3.1. Preprocess plot image and template image"
    ]
   },
   {
@@ -219,15 +204,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "template_mask = image_tresholding(source_template, treshold=100)\n",
-    "additional_template_mask = reconstruct_template_mask(template_mask)\n",
+    "template_mask_initial = get_template_mask(source_template_image)\n",
     "\n",
-    "# fig = plt.figure()\n",
-    "# plt.subplot(1, 2, 1)\n",
-    "# draw_image(template_mask)\n",
+    "template_image, template_mask = center_object_on_template_image(\n",
+    "    source_template_image, template_mask_initial\n",
+    ")\n",
     "\n",
-    "# plt.subplot(1, 2, 2)\n",
-    "# draw_image(additional_template_mask)"
+    "plot_image = replace_black_pixels(plot_image, value=10)\n",
+    "template_image = replace_black_pixels(template_image, value=10)\n",
+    "\n",
+    "# additional_template_mask = reconstruct_template_mask(template_mask)"
    ]
   },
   {
@@ -236,8 +222,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# draw_image(template_mask)"
+    "draw_image(template_image)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -253,17 +246,12 @@
    "outputs": [],
    "source": [
     "correlation_map, _ = template_match(\n",
-    "    image, template, template_mask, norm_result=True\n",
+    "    plot_image, template_image, template_mask, norm_result=True\n",
     ")\n",
     "\n",
-    "correlation_map2, _ = template_match(\n",
-    "    image, template, template_mask, norm_result=True,\n",
-    "    method_name=\"cv.TM_SQDIFF\"\n",
-    ")\n",
-    "\n",
-    "correlation_map_additional, _ = template_match(\n",
-    "    image, template, additional_template_mask, norm_result=True\n",
-    ")"
+    "# correlation_map_additional, _ = template_match(\n",
+    "#     plot_image, template_image, additional_template_mask, norm_result=True\n",
+    "# )"
    ]
   },
   {
@@ -280,11 +268,33 @@
    "outputs": [],
    "source": [
     "accumulator = generalized_hough_transform(\n",
-    "    image, template, norm_result=True, crop_result=True\n",
+    "    plot_image, template_image, norm_result=True, crop_result=True\n",
     ")\n",
     "\n",
     "assert correlation_map.shape == accumulator.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from scanplot.core.hough_transform import calc_gradients\n",
+    "# edges = cv.Canny(\n",
+    "#     template_mask, threshold1=10, threshold2=180\n",
+    "# )\n",
+    "# gradient = calc_gradients(edges)\n",
+    "\n",
+    "# imshow_interactive(gradient)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -299,26 +309,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# correlation_map_combined = correlation_map + 0.7 * correlation_map_additional\n",
-    "# correlation_map_combined = normalize_map(correlation_map_combined)\n",
-    "\n",
-    "# correlation_map_with_hough = correlation_map + 0.6 * accumulator\n",
-    "# correlation_map_with_hough = normalize_map(correlation_map_with_hough)\n",
-    "\n",
-    "# correlation_map_new = (correlation_map + correlation_map2) / 2\n",
-    "# correlation_map_with_hough = correlation_map_new + 0.6 * accumulator\n",
-    "\n",
     "correlation_map_with_hough = correlation_map + 0.6 * accumulator\n",
-    "correlation_map_with_hough = normalize_map(correlation_map_with_hough)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "imshow_interactive(correlation_map_with_hough)"
+    "correlation_map_with_hough = normalize_map(correlation_map_with_hough)\n",
+    "\n",
+    "# correlation_map_combined = correlation_map + 0.7 * correlation_map_additional\n",
+    "# correlation_map_combined = normalize_map(correlation_map_combined)"
    ]
   },
   {
@@ -346,8 +341,8 @@
    "outputs": [],
    "source": [
     "detector = DetectorWidget(\n",
-    "    source_image=source_image,\n",
-    "    template=template,\n",
+    "    source_image=source_plot_image,\n",
+    "    template=template_image,\n",
     "    correlation_map=correlation_map_with_hough\n",
     ")"
    ]
@@ -410,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapper = CoordinatesMapper(source_image)"
+    "mapper = CoordinatesMapper(source_plot_image)"
    ]
   },
   {
