--- a/examples/select_markers.ipynb
+++ b/examples/select_markers.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PLOT_NUMBER = 8\n",
+    "PLOT_NUMBER = 37\n",
     "\n",
     "PLOT_PATH = DATA_PATH / \"plot_images\" / f\"plot{PLOT_NUMBER}.png\""
    ]
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "# specify how many types of markers are on the scatter plot\n",
-    "markers_number = 3\n",
+    "markers_number = 2\n",
     "\n",
     "# create widget\n",
     "marker_selector = MarkerSelectorBBoxWidget(source_image, markers_number)"
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "marker_selector"
+    "display(marker_selector)"
    ]
   },
   {
