upgrade read_image function

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scanplot.io import read_image_rgb, dump_coords_csv\n",
+    "from scanplot.io import load_image, dump_coords_csv\n",
     "from scanplot.plotting import draw_image, draw_ROI\n",
     "from scanplot.view import CoordinatesMapper, DetectorWidget\n",
     "\n",
@@ -110,8 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_plot_image = read_image_rgb(PLOT_PATH)\n",
-    "source_template_image = read_image_rgb(TEMPLATE_PATH)\n",
+    "source_plot_image = load_image(PLOT_PATH)\n",
+    "source_template_image = load_image(TEMPLATE_PATH)\n",
     "\n",
     "plot_image = np.copy(source_plot_image)\n",
     "template_image = np.copy(source_template_image)"
