--- a/examples/select_markers.ipynb
+++ b/examples/select_markers.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from scanplot.io import read_image_rgb, save_markers\n",
+    "from scanplot.io import load_image, save_markers\n",
     "from scanplot.plotting import draw_image\n",
     "from scanplot.core.process_template import extract_markers_from_image\n",
     "from scanplot.view import MarkerSelectorBBoxWidget"
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_image = read_image_rgb(PLOT_PATH)\n",
+    "source_image = load_image(PLOT_PATH)\n",
     "\n",
     "draw_image(source_image)"
    ]
