--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -286,7 +286,7 @@
     "- Points Number\n",
     "- Points Density\n",
     "\n",
-    "Learn more about parameters selection in [documentation](https://github.com/adusachev/scanplot/blob/develop/docs/user_manual.md#algorithm-parameters)."
+    "Learn more about parameters selection in [documentation](https://github.com/adusachev/scanplot/blob/master/docs/user_manual.md#detector)."
    ]
   },
   {
@@ -315,7 +315,15 @@
     "    \"marker_type\": \"*\",\n",
     "}\n",
     "\n",
-    "detector_widget = detector.main_widget(**widget_settings)\n",
+    "detector_widget = detector.main_widget(**widget_settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "display(detector_widget)"
    ]
   },
