--- a/examples/select_markers.ipynb
+++ b/examples/select_markers.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PLOT_NUMBER = 37\n",
+    "PLOT_NUMBER = 22\n",
     "\n",
     "PLOT_PATH = DATA_PATH / \"plot_images\" / f\"plot{PLOT_NUMBER}.png\""
    ]
@@ -67,8 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# specify how many types of markers are on the scatter plot\n",
-    "markers_number = 2\n",
+    "# (!) specify how many types of markers are on the scatter plot\n",
+    "markers_number = 3\n",
     "\n",
     "# create widget\n",
     "marker_selector = MarkerSelectorBBoxWidget(source_image, markers_number)"
@@ -96,15 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "marker_selector.validate_bboxes()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "marker_selector.validate_bboxes()\n",
+    "\n",
     "marker_images, _ = extract_markers_from_image(\n",
     "    source_image, marker_selector.bboxes\n",
     ")"
