implement high-level funcs: run_matching, _match_single_marker

--- a/examples/api_new.ipynb
+++ b/examples/api_new.ipynb
@@ -166,6 +166,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "marker_selector_widget.bboxes = [{'x': 329, 'y': 806, 'width': 64, 'height': 64, 'label': 'marker1'},\n",
+    " {'x': 262, 'y': 754, 'width': 62, 'height': 52, 'label': 'marker2'}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "marker_selector_widget.validate_bboxes()\n",
     "\n",
     "plot.extract_markers(marker_bboxes=marker_selector_widget.bboxes)"
@@ -221,7 +231,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# roi_widget.bboxes"
+    "roi_widget.bboxes = [{'x': 457, 'y': 641, 'width': 220, 'height': 139, 'label': 'ROI for marker1'},\n",
+    " {'x': 637, 'y': 575, 'width': 147, 'height': 100, 'label': 'ROI for marker1'},\n",
+    " {'x': 742, 'y': 478, 'width': 231, 'height': 116, 'label': 'ROI for marker1'},\n",
+    " {'x': 746, 'y': 555, 'width': 257, 'height': 242, 'label': 'ROI for marker2'}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot._images_algorithm_input"
    ]
   },
   {
@@ -231,6 +253,15 @@
    "outputs": [],
    "source": [
     "plot.apply_roi(roi_bboxes=roi_widget.bboxes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw_image(plot._images_algorithm_input[\"marker2\"])"
    ]
   },
   {
@@ -264,10 +295,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "correlation_maps = plot_image.run_matching()\n",
+    "correlation_maps = plot.run_matching()\n",
     "\n",
     "## inside: preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imshow_interactive(correlation_maps[\"marker2\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# res = plot._match_single_marker(plot.markers[\"marker1\"], plot.data)"
    ]
   },
   {
