--- a/examples/api_new.ipynb
+++ b/examples/api_new.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import cv2 as cv\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "from jupyter_bbox_widget import BBoxWidget\n",
     "from plotly.express import imshow as imshow_interactive"
@@ -45,7 +45,8 @@
     "from scanplot.io import load_image, dump_coords_csv\n",
     "from scanplot.plotting import draw_image, draw_ROI\n",
     "from scanplot.view import (\n",
-    "    CoordinatesMapper, DetectorWidget, MarkerSelectorBBoxWidget, ROISelectorBBoxWidget\n",
+    "    CoordinatesMapper, DetectorWidget, MarkerSelectorBBoxWidget, ROISelectorBBoxWidget,\n",
+    "    DetectorWidgetCombined\n",
     ")\n",
     "\n",
     "from scanplot.core.process_template import extract_markers_from_image\n",
@@ -105,7 +106,9 @@
     "plot_number = 37\n",
     "plot_image_filepath = data_path / \"plot_images\" / f\"plot{plot_number}.png\"\n",
     "\n",
-    "plot = Plot(plot_image_filepath)\n",
+    "image = load_image(plot_image_filepath)\n",
+    "\n",
+    "plot = Plot(image)\n",
     "plot.draw()"
    ]
   },
@@ -231,10 +234,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "roi_widget.bboxes = [{'x': 457, 'y': 641, 'width': 220, 'height': 139, 'label': 'ROI for marker1'},\n",
-    " {'x': 637, 'y': 575, 'width': 147, 'height': 100, 'label': 'ROI for marker1'},\n",
-    " {'x': 742, 'y': 478, 'width': 231, 'height': 116, 'label': 'ROI for marker1'},\n",
-    " {'x': 746, 'y': 555, 'width': 257, 'height': 242, 'label': 'ROI for marker2'}]"
+    "# roi_widget.bboxes = [{'x': 457, 'y': 641, 'width': 220, 'height': 139, 'label': 'ROI for marker1'},\n",
+    "#  {'x': 637, 'y': 575, 'width': 147, 'height': 100, 'label': 'ROI for marker1'},\n",
+    "#  {'x': 742, 'y': 478, 'width': 231, 'height': 116, 'label': 'ROI for marker1'},\n",
+    "#  {'x': 746, 'y': 555, 'width': 257, 'height': 242, 'label': 'ROI for marker2'}]\n",
+    "\n",
+    "roi_widget.bboxes = [{'x': 238,\n",
+    "  'y': 263,\n",
+    "  'width': 1199,\n",
+    "  'height': 620,\n",
+    "  'label': 'ROI for marker1'},\n",
+    " {'x': 253,\n",
+    "  'y': 221,\n",
+    "  'width': 1202,\n",
+    "  'height': 666,\n",
+    "  'label': 'ROI for marker2'}]"
    ]
   },
   {
@@ -261,26 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_image(plot._images_algorithm_input[\"marker2\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO\n",
-    "\n",
-    "# ## draw obtained ROI\n",
-    "\n",
-    "# plt.subplot(1, 2, 1)\n",
-    "# draw_image(plot.data)\n",
-    "# draw_ROI(_pl)\n",
-    "\n",
-    "# plt.subplot(1, 2, 2)\n",
-    "# draw_image(plot.data)\n",
-    "# draw_ROI(roi_list[1])"
+    "plot.draw_region_of_interest(marker=\"marker1\")"
    ]
   },
   {
@@ -295,17 +290,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "correlation_maps = plot.run_matching()\n",
-    "\n",
-    "## inside: preprocessing"
+    "correlation_maps = plot.run_matching()"
    ]
   },
   {
@@ -314,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imshow_interactive(correlation_maps[\"marker2\"])"
+    "# imshow_interactive(correlation_maps[\"marker2\"])"
    ]
   },
   {
@@ -339,32 +325,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## input: \n",
-    "# 1) list of corr correlation_maps\n",
-    "# 2) list of preprocessed images\n",
-    "# 3) list of preprocessed marker images (only for shapes)\n",
-    "\n",
-    "detector = DetectorWidget(\n",
-    "    source_image=plot_image.data,\n",
-    "    correlation_maps_list=correlation_maps,\n",
-    "    markers_list=plot_image.markers\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "widget_settings = {\n",
+    "settings = {\n",
     "    \"fig_size\": 9,\n",
     "    \"marker_size\": 70,\n",
     "    \"marker_color\": \"yellow\",\n",
     "    \"marker_type\": \"*\",\n",
-    "}\n",
-    "\n",
-    "detector_widget = detector.main_widget(**widget_settings)"
+    "}"
    ]
   },
   {
@@ -373,7 +339,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(detector_widget)"
+    "# detector_widget_marker1 = DetectorWidget(plot, marker=\"marker1\")\n",
+    "# # detector_widget_marker1.apply_widget_settings(**settings)  # change settings if you want\n",
+    "# detector_widget_marker1.widget()"
    ]
   },
   {
@@ -382,13 +350,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_markers_detections = detector.get_detections()\n",
-    "marker1_detections = detector.get_detections_for_marker(marker=\"marker1\")\n",
+    "detector_widget = DetectorWidgetCombined(plot)\n",
+    "detector_widget.apply_widget_settings(**settings)   # change settings if you want\n",
+    "detector_widget.widget()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points = detector_widget.get_detections()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# all_markers_detections = detector.get_detections()\n",
+    "# marker1_detections = detector.get_detections_for_marker(marker=\"marker1\")\n",
     "\n",
-    "# points coordinates in pixels (!)\n",
-    "x = pixel_detections.x\n",
-    "y = pixel_detections.y\n",
-    "plt.scatter(x, y)"
+    "# # points coordinates in pixels (!)\n",
+    "# x = pixel_detections.x\n",
+    "# y = pixel_detections.y\n",
+    "# plt.scatter(x, y)"
    ]
   },
   {
@@ -465,350 +467,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PLOT_NUMBER = 37\n",
-    "MARKER_NUMBER = 2\n",
-    "\n",
-    "PLOT_PATH = DATA_PATH / \"plot_images\" / f\"plot{PLOT_NUMBER}.png\"\n",
-    "TEMPLATE_PATH = DATA_PATH / \"marker_images\" / f\"plot{PLOT_NUMBER}_marker{MARKER_NUMBER}.png\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "source_plot_image = load_image(PLOT_PATH)\n",
-    "source_template_image = load_image(TEMPLATE_PATH)\n",
-    "\n",
-    "plot_image = np.copy(source_plot_image)\n",
-    "template_image = np.copy(source_template_image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.subplot(1, 2, 1)\n",
-    "draw_image(source_plot_image)\n",
-    "plt.title(\"Source scatter plot image\")\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "draw_image(source_template_image)\n",
-    "plt.title(\"Chosen marker\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. (optional step) Select region of interest\n",
-    "\n",
-    "Default ROI is a whole image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "roi_widget = BBoxWidget(\n",
-    "    hide_buttons=True,\n",
-    "    classes=[\"Region of interest\"],\n",
-    "    image_bytes=cv.imencode(\".png\", source_plot_image)[1].tobytes(),\n",
-    "    colors=[\"green\"],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(roi_widget)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "roi = bboxes_to_roi(source_plot_image, roi_widget.bboxes)\n",
-    "plot_image = apply_roi(source_plot_image, roi)\n",
-    "\n",
-    "draw_image(source_plot_image)\n",
-    "draw_ROI(roi)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Run matching algorithms"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3.1. Preprocess plot image and template image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "template_mask_initial = get_template_mask(source_template_image)\n",
-    "\n",
-    "template_image, template_mask = center_object_on_template_image(\n",
-    "    source_template_image, template_mask_initial\n",
-    ")\n",
-    "\n",
-    "plot_image = replace_black_pixels(plot_image, value=10)\n",
-    "template_image = replace_black_pixels(template_image, value=10)\n",
-    "\n",
-    "# additional_template_mask = reconstruct_template_mask(template_mask)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3.2. Run template matching algorithm and compute correlatoin map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "correlation_map, _ = template_match(\n",
-    "    plot_image, template_image, template_mask, norm_result=True\n",
-    ")\n",
-    "\n",
-    "# correlation_map_additional, _ = template_match(\n",
-    "#     plot_image, template_image, additional_template_mask, norm_result=True\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3.3. Run Hough transform algorithm and compute accumulator array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "accumulator = generalized_hough_transform(\n",
-    "    plot_image, template_image, norm_result=True, crop_result=True\n",
-    ")\n",
-    "\n",
-    "assert correlation_map.shape == accumulator.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3.4. Combine correlation map obtained by template matching algorithm and accumulator array from Hough Transform"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "correlation_map_with_hough = correlation_map + 0.6 * accumulator\n",
-    "correlation_map_with_hough = normalize_map(correlation_map_with_hough)\n",
-    "\n",
-    "# correlation_map_combined = correlation_map + 0.7 * correlation_map_additional\n",
-    "# correlation_map_combined = normalize_map(correlation_map_combined)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Select algorithm parameters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The algorithm has 2 parameters:\n",
-    "- Points Number\n",
-    "- Points Density\n",
-    "\n",
-    "Learn more about parameters selection in [documentation](https://github.com/adusachev/scanplot/blob/master/docs/user_manual.md#detector)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "detector = DetectorWidget(\n",
-    "    source_image=source_plot_image,\n",
-    "    template=template_image,\n",
-    "    correlation_map=correlation_map_with_hough\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "widget_settings = {\n",
-    "    \"fig_size\": 9,\n",
-    "    \"marker_size\": 70,\n",
-    "    \"marker_color\": \"yellow\",\n",
-    "    \"marker_type\": \"*\",\n",
-    "}\n",
-    "\n",
-    "detector_widget = detector.main_widget(**widget_settings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(detector_widget)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "detected_points_px = detector.get_detections()\n",
-    "\n",
-    "# points coordinates in pixels (!)\n",
-    "x = detected_points_px[:, 0]\n",
-    "y = detected_points_px[:, 1]\n",
-    "plt.scatter(x, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5. Convert obtained coordinates from pixel to real values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Map pixel coordinates to factual coordinates"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mapper = CoordinatesMapper(source_plot_image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig_size = 10\n",
-    "\n",
-    "mapper_widget = mapper.interactive_widget(fig_size=fig_size)\n",
-    "display(mapper_widget)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Convert pixel coordinates to factual coordinates"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "converter = CoordinatesConverter()\n",
-    "converter.import_parameters_from_mapper(mapper)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_px = detected_points_px[:, 0]\n",
-    "y_px = detected_points_px[:, 1]\n",
-    "\n",
-    "x_factual, y_factual = converter.from_pixel(x_pixel=x_px, y_pixel=y_px)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(x_factual, y_factual)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -827,13 +485,6 @@
     "    savepath=f\"detections_plot{PLOT_NUMBER}_marker{MARKER_NUMBER}.csv\"\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
