add get_detections method to DetectorWidgetCombined

--- a/examples/api_new.ipynb
+++ b/examples/api_new.ipynb
@@ -103,9 +103,16 @@
    "outputs": [],
    "source": [
     "data_path = pathlib.Path(\"../datasets/\")\n",
-    "plot_number = 37\n",
-    "plot_image_filepath = data_path / \"plot_images\" / f\"plot{plot_number}.png\"\n",
-    "\n",
+    "plot_number = 22\n",
+    "plot_image_filepath = data_path / \"plot_images\" / f\"plot{plot_number}.png\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "image = load_image(plot_image_filepath)\n",
     "\n",
     "plot = Plot(image)\n",
@@ -132,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot.set_markers_number(2)"
+    "plot.set_markers_number(3)"
    ]
   },
   {
@@ -189,11 +196,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "## draw extracted markers\n",
+    "# ## draw extracted markers\n",
     "\n",
-    "# for marker in plot.markers:\n",
-    "#     draw_image(marker)\n",
+    "# for marker_label, marker_image in plot.markers.items():\n",
+    "#     draw_image(marker_image)\n",
+    "#     plt.title(marker_label)\n",
     "#     plt.show()"
    ]
   },
@@ -275,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot.draw_region_of_interest(marker=\"marker1\")"
+    "plot.draw_region_of_interest(marker=\"marker3\")"
    ]
   },
   {
@@ -309,7 +324,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# res = plot._match_single_marker(plot.markers[\"marker1\"], plot.data)"
+    "# res = plot._match_single_marker(\n",
+    "#     plot.data,\n",
+    "#     plot.markers[\"marker1\"],\n",
+    "#     plot._marker_masks[\"marker1\"],\n",
+    "# )"
    ]
   },
   {
@@ -360,37 +379,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "points = detector_widget.get_detections()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# all_markers_detections = detector.get_detections()\n",
-    "# marker1_detections = detector.get_detections_for_marker(marker=\"marker1\")\n",
+    "# points coordinates in pixels (!)\n",
     "\n",
-    "# # points coordinates in pixels (!)\n",
-    "# x = pixel_detections.x\n",
-    "# y = pixel_detections.y\n",
-    "# plt.scatter(x, y)"
+    "all_detections = detector_widget.get_detections()\n",
+    "\n",
+    "marker1_detections = all_detections[\"marker1\"]\n",
+    "x = marker1_detections[:, 0]\n",
+    "y = marker1_detections[:, 1]\n",
+    "plt.scatter(x, y, alpha=0.5)"
    ]
   },
   {
@@ -406,7 +403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapper = CoordinatesMapper(source_plot_image)\n",
+    "mapper = CoordinatesMapper(image)\n",
     "\n",
     "fig_size = 10\n",
     "mapper_widget = mapper.interactive_widget(fig_size=fig_size)"
