rework CoorditatesMapper widget

--- a/examples/api_new.ipynb
+++ b/examples/api_new.ipynb
@@ -45,7 +45,7 @@
     "from scanplot.io import load_image, dump_coords_csv\n",
     "from scanplot.plotting import draw_image, draw_ROI\n",
     "from scanplot.view import (\n",
-    "    CoordinatesMapper, DetectorWidget, MarkerSelectorBBoxWidget, ROISelectorBBoxWidget,\n",
+    "    CoordinatesMapperWidget, DetectorWidget, MarkerSelectorBBoxWidget, ROISelectorBBoxWidget,\n",
     "    DetectorWidgetCombined\n",
     ")\n",
     "\n",
@@ -103,7 +103,7 @@
    "outputs": [],
    "source": [
     "data_path = pathlib.Path(\"../datasets/\")\n",
-    "plot_number = 22\n",
+    "plot_number = 37\n",
     "plot_image_filepath = data_path / \"plot_images\" / f\"plot{plot_number}.png\""
    ]
   },
@@ -139,7 +139,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot.set_markers_number(3)"
+    "uniquie_markers_count = 2\n",
+    "\n",
+    "plot.set_markers_number(uniquie_markers_count)"
    ]
   },
   {
@@ -290,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot.draw_region_of_interest(marker=\"marker3\")"
+    "plot.draw_region_of_interest(marker=\"marker1\")"
    ]
   },
   {
@@ -403,10 +405,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapper = CoordinatesMapper(image)\n",
+    "mapper_widget = CoordinatesMapperWidget(image)\n",
     "\n",
-    "fig_size = 10\n",
-    "mapper_widget = mapper.interactive_widget(fig_size=fig_size)"
+    "mapper_widget.apply_widgted_settings(fig_size=10)"
    ]
   },
   {
@@ -415,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(mapper_widget)"
+    "mapper_widget.widget()"
    ]
   },
   {
@@ -432,7 +433,7 @@
    "outputs": [],
    "source": [
     "converter = CoordinatesConverter()\n",
-    "converter.import_parameters_from_mapper(mapper)"
+    "converter.import_parameters_from_mapper(mapper_widget)"
    ]
   },
   {
@@ -441,8 +442,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_px = marker1_detections.x\n",
-    "y_px = marker2_detections.y\n",
+    "marker1_detections = all_detections[\"marker1\"]\n",
+    "\n",
+    "x_px = marker1_detections[:, 0]\n",
+    "y_px = marker1_detections[:, 1]\n",
     "\n",
     "x_factual, y_factual = converter.from_pixel(x_pixel=x_px, y_pixel=y_px)"
    ]
@@ -455,13 +458,6 @@
    "source": [
     "plt.scatter(x_factual, y_factual)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -479,7 +475,7 @@
     "dump_coords_csv(\n",
     "    x=x_factual,\n",
     "    y=y_factual,\n",
-    "    savepath=f\"detections_plot{PLOT_NUMBER}_marker{MARKER_NUMBER}.csv\"\n",
+    "    savepath=f\"detections.csv\"\n",
     ")"
    ]
   },
