reduce max value of Points Number slider; add interfase widget() to all widgets

--- a/examples/api_new.ipynb
+++ b/examples/api_new.ipynb
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(marker_selector_widget)"
+    "marker_selector_widget.widget()"
    ]
   },
   {
@@ -242,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(roi_widget)"
+    "roi_widget.widget()"
    ]
   },
   {
