--- a/examples/api_new.ipynb
+++ b/examples/api_new.ipynb
@@ -16,10 +16,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "from jupyter_bbox_widget import BBoxWidget\n",
-    "from plotly.express import imshow as imshow_interactive"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -43,36 +40,12 @@
    "outputs": [],
    "source": [
     "from scanplot.io import load_image, dump_coords_csv\n",
-    "from scanplot.plotting import draw_image, draw_ROI\n",
+    "from scanplot.plotting import draw_image\n",
     "from scanplot.view import (\n",
-    "    CoordinatesMapperWidget, DetectorWidget, MarkerSelectorBBoxWidget, ROISelectorBBoxWidget,\n",
-    "    DetectorWidgetCombined\n",
+    "    CoordinatesMapperWidget, MarkerSelectorBBoxWidget,\n",
+    "    ROISelectorBBoxWidget, DetectorWidgetCombined\n",
     ")\n",
-    "\n",
-    "from scanplot.core.process_template import extract_markers_from_image\n",
-    "\n",
-    "from scanplot.core import (\n",
-    "    template_match,\n",
-    "    replace_black_pixels,\n",
-    "    normalize_map,\n",
-    "    image_tresholding,\n",
-    "    get_template_mask,\n",
-    "    center_object_on_template_image,\n",
-    "    reconstruct_template_mask,\n",
-    "    generalized_hough_transform,\n",
-    "    CoordinatesConverter,\n",
-    "    bboxes_to_roi,\n",
-    "    _apply_roi,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scanplot.core import Plot"
+    "from scanplot.core import Plot, CoordinatesConverter"
    ]
   },
   {
@@ -269,12 +242,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "plot._images_algorithm_input"
+    "Apply selected regions of interest to a Plot"
    ]
   },
   {
@@ -407,7 +378,7 @@
    "source": [
     "mapper_widget = CoordinatesMapperWidget(image)\n",
     "\n",
-    "mapper_widget.apply_widgted_settings(fig_size=10)"
+    "mapper_widget.apply_widget_settings(fig_size=10)"
    ]
   },
   {
