fix apply_roi case when one of roi is not selected

--- a/examples/api_new.ipynb
+++ b/examples/api_new.ipynb
@@ -112,9 +112,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uniquie_markers_count = 2\n",
+    "unique_markers_count = 2\n",
     "\n",
-    "plot.set_markers_number(uniquie_markers_count)"
+    "plot.set_markers_number(unique_markers_count)"
    ]
   },
   {
@@ -171,13 +171,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# ## draw extracted markers\n",
     "\n",
@@ -224,11 +217,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# roi_widget.bboxes = [{'x': 457, 'y': 641, 'width': 220, 'height': 139, 'label': 'ROI for marker1'},\n",
-    "#  {'x': 637, 'y': 575, 'width': 147, 'height': 100, 'label': 'ROI for marker1'},\n",
-    "#  {'x': 742, 'y': 478, 'width': 231, 'height': 116, 'label': 'ROI for marker1'},\n",
-    "#  {'x': 746, 'y': 555, 'width': 257, 'height': 242, 'label': 'ROI for marker2'}]\n",
-    "\n",
     "roi_widget.bboxes = [{'x': 238,\n",
     "  'y': 263,\n",
     "  'width': 1199,\n",
@@ -427,7 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(x_factual, y_factual)"
+    "plt.scatter(x_factual, y_factual, alpha=0.5)"
    ]
   },
   {
