fix roi initialization

--- a/examples/api_new.ipynb
+++ b/examples/api_new.ipynb
@@ -267,6 +267,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# plot._images_algorithm_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "correlation_maps = plot.run_matching()"
    ]
   },
