raise exceptions when markers are not selected

--- a/examples/api_new.ipynb
+++ b/examples/api_new.ipynb
@@ -10,18 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "from scanplot.io import load_image, dump_coords_csv\n",
     "from scanplot.plotting import draw_image\n",
     "from scanplot.view import (\n",
@@ -75,9 +66,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = pathlib.Path(\"../datasets/\")\n",
+    "dataset_path = pathlib.Path(\"../datasets/\")\n",
     "plot_number = 37\n",
-    "plot_image_filepath = data_path / \"plot_images\" / f\"plot{plot_number}.png\""
+    "plot_image_filepath = dataset_path / \"plot_images\" / f\"plot{plot_number}.png\""
    ]
   },
   {
@@ -103,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Specify how much marker types on image"
+    "**Important step**: in `unique_markers_count` you need to specify how many types of markers are on the image."
    ]
   },
   {
@@ -112,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_markers_count = 2\n",
+    "unique_markers_count = 3\n",
     "\n",
     "plot.set_markers_number(unique_markers_count)"
    ]
@@ -151,8 +142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "marker_selector_widget.bboxes = [{'x': 329, 'y': 806, 'width': 64, 'height': 64, 'label': 'marker1'},\n",
-    " {'x': 262, 'y': 754, 'width': 62, 'height': 52, 'label': 'marker2'}]"
+    "# marker_selector_widget.bboxes = [{'x': 329, 'y': 806, 'width': 64, 'height': 64, 'label': 'marker1'},\n",
+    "#  {'x': 262, 'y': 754, 'width': 62, 'height': 52, 'label': 'marker2'}]"
    ]
   },
   {
@@ -251,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot.draw_region_of_interest(marker=\"marker1\")"
+    "plot.draw_region_of_interest(marker=\"marker3\")"
    ]
   },
   {
