--- a/examples/select_markers.ipynb
+++ b/examples/select_markers.ipynb
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(marker_selector)"
+    "marker_selector.widget()"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## draw extracted markers\n",
+    "# # draw extracted markers\n",
     "\n",
     "# for marker in marker_images:\n",
     "#     draw_image(marker)\n",
